test/corpus/kotlin-spec-tests/annotation.txt

================================================================================
Annotations at file start
================================================================================

@ann class A

--------------------------------------------------------------------------------

(source_file
    (class_declaration
    modifiers: (modifiers
        (annotation
        (user_type
            (type_identifier))))
    name: (simple_identifier)))


================================================================================
Annotation value arguments ambiguity
================================================================================

fun foo() {
    @ann ({ it -> it + 1}) // lambda parsed as argument of annotation, and annotated expression is "print(1)"
    print(1)

    @ann() ({ it -> it + 1}) // lambda in parenthesis's annotated, "print(1)" is separated expression
    print(1)
}

--------------------------------------------------------------------------------

(source_file
    (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
        (block
        (statements
            (statement
            (annotated_expression
                annotation: (annotation
                (constructor_invocation
                    type: (user_type
                    (type_identifier))
                    args: (value_arguments
                    (value_argument
                        expression: (lambda_literal
                        parameters: (lambda_parameters
                            (variable_declaration
                            id: (simple_identifier)))
                        body: (statements
                            (statement
                            (additive_expression
                                left: (simple_identifier)
                                right: (integer_literal)))))))))
                (line_comment)
                expression: (call_expression
                expression: (simple_identifier)
                args: (value_arguments
                    (value_argument
                    expression: (integer_literal))))))
            (statement
            (annotated_expression
                annotation: (annotation
                (constructor_invocation
                    type: (user_type
                    (type_identifier))
                    args: (value_arguments)))
                expression: (parenthesized_expression
                (lambda_literal
                    parameters: (lambda_parameters
                    (variable_declaration
                        id: (simple_identifier)))
                    body: (statements
                    (statement
                        (additive_expression
                        left: (simple_identifier)
                        right: (integer_literal))))))))
            (line_comment)
            (statement
            (call_expression
                expression: (simple_identifier)
                args: (value_arguments
                (value_argument
                    expression: (integer_literal))))))))))

================================================================================
Block level expressions
================================================================================

fun foo() {
    @ann0
    var x0 = foo0()

    @ann1
    // comment
    /* comment */
    x1 = foo1()

    // many empty new lines
    @ann2


    x2 += foo2()

    @ann21 @ann22

    @ann23
    x22 += foo22()

    for (i in 1..100) {
        @ann3
        x3 += foo3()
    }

    for (i in 1..100)
        @ann4
        x4 += foo4()

    if (1 > 2)
        @ann41
        x41 += foo41()

    if (3 > 4)
        @ann42
        x42 += foo42()
    else
        @ann43
        x43 += foo43()

    while (true)
        @ann44
        x44 += foo44()

    do
        @ann
        x45 += foo45()
    while (true)

    when (1) {
        1 ->
            @ann46
            x46 += foo46()
    }

    a.filter {
        @ann5
        x5 += foo5()
    }

    @ann6
    x6 ?: x7 infix x9 + 10

    @ann7
    return 1

    @ann8
    x as Type
}

--------------------------------------------------------------------------------

(source_file
    (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
        (block
        (statements
            (statement
            (property_declaration
                modifiers: (modifiers
                (annotation
                    (user_type
                    (type_identifier))))
                binding_pattern: (binding_pattern_kind)
                var_decl: (variable_declaration
                id: (simple_identifier))
                initializer: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
            (statement
            (assignment
                left: (annotated_expression
                annotation: (annotation
                    (user_type
                    (type_identifier)))
                (line_comment)
                (multiline_comment)
                expression: (simple_identifier))
                right: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
            (line_comment)
            (statement
            (assignment
                left: (annotated_expression
                annotation: (annotation
                    (user_type
                    (type_identifier)))
                expression: (simple_identifier))
                right: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
            (statement
            (assignment
                left: (annotated_expression
                annotation: (annotation
                    (user_type
                    (type_identifier)))
                expression: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (annotated_expression
                    annotation: (annotation
                        (user_type
                        (type_identifier)))
                    expression: (simple_identifier))))
                right: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
            (statement
            (for_statement
                var_decl: (variable_declaration
                id: (simple_identifier))
                expression: (range_expression
                left: (integer_literal)
                right: (integer_literal))
                body: (block
                (statements
                    (statement
                    (assignment
                        left: (annotated_expression
                        annotation: (annotation
                            (user_type
                            (type_identifier)))
                        expression: (simple_identifier))
                        right: (call_expression
                        expression: (simple_identifier)
                        args: (value_arguments))))))))
            (statement
            (for_statement
                var_decl: (variable_declaration
                id: (simple_identifier))
                expression: (range_expression
                left: (integer_literal)
                right: (integer_literal))
                body: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (if_expression
                condition: (comparison_expression
                left: (integer_literal)
                right: (integer_literal))
                consequence: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (if_expression
                condition: (comparison_expression
                left: (integer_literal)
                right: (integer_literal))
                consequence: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))
                alternative: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (while_statement
                (boolean_literal)
                (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (do_while_statement
                (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))
                (boolean_literal)))
            (statement
            (when_expression
                (when_subject
                (integer_literal))
                (when_entries
                (when_entry
                    (when_condition
                    (integer_literal))
                    (assignment
                    left: (annotated_expression
                        annotation: (annotation
                        (user_type
                            (type_identifier)))
                        expression: (simple_identifier))
                    right: (call_expression
                        expression: (simple_identifier)
                        args: (value_arguments)))))))
            (statement
            (call_expression
                expression: (dot_qualified_expression
                receiver: (simple_identifier)
                selector: (simple_identifier))
                lambda_arg: (annotated_lambda
                lambda_literal: (lambda_literal
                    body: (statements
                    (statement
                        (assignment
                        left: (annotated_expression
                            annotation: (annotation
                            (user_type
                                (type_identifier)))
                            expression: (simple_identifier))
                        right: (call_expression
                            expression: (simple_identifier)
                            args: (value_arguments)))))))))
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (elvis_expression
                left: (simple_identifier)
                right: (infix_expression
                    left: (simple_identifier)
                    operator: (simple_identifier)
                    right: (additive_expression
                    left: (simple_identifier)
                    right: (integer_literal))))))
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (return_expression
                (integer_literal))))
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (as_expression
                expression: (simple_identifier)
                type: (type
                    type: (user_type
                        (type_identifier)))))))))))

================================================================================
Block level expressions no newline
================================================================================

fun foo() {
    @ann0 var x0 = foo0()

    @ann1 x1 = foo1()

    @ann2 @ann22 x2 += foo2()

    for (i in 1..100) {
        @ann3 x3 += foo3()
    }

    for (i in 1..100)
        @ann4 x4 += foo4()

    if (1 > 2)
        @ann41 x41 += foo41()

    if (3 > 4)
        @ann42 x42 += foo42()
    else
        @ann43 x43 += foo43()

    while (true)
        @ann44 x44 += foo44()

    do
        @ann x45 += foo45()
    while (true)

    when (1) {
        1 ->
            @ann46 x46 += foo46()
    }

    a.filter {
        @ann5 x5 += foo5()
    }

    @ann6 x6 ?: x7 infix x9 + 10

    @ann7 return 1

    @ann8 x as Type
}

--------------------------------------------------------------------------------

(source_file
    (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
        (block
        (statements
            (statement
            (property_declaration
                modifiers: (modifiers
                (annotation
                    (user_type
                    (type_identifier))))
                binding_pattern: (binding_pattern_kind)
                var_decl: (variable_declaration
                id: (simple_identifier))
                initializer: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
            (statement
            (assignment
                left: (annotated_expression
                annotation: (annotation
                    (user_type
                    (type_identifier)))
                expression: (simple_identifier))
                right: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
            (statement
            (assignment
                left: (annotated_expression
                annotation: (annotation
                    (user_type
                    (type_identifier)))
                expression: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier)))
                right: (call_expression
                expression: (simple_identifier)
                args: (value_arguments))))
            (statement
            (for_statement
                var_decl: (variable_declaration
                id: (simple_identifier))
                expression: (range_expression
                left: (integer_literal)
                right: (integer_literal))
                body: (block
                (statements
                    (statement
                    (assignment
                        left: (annotated_expression
                        annotation: (annotation
                            (user_type
                            (type_identifier)))
                        expression: (simple_identifier))
                        right: (call_expression
                        expression: (simple_identifier)
                        args: (value_arguments))))))))
            (statement
            (for_statement
                var_decl: (variable_declaration
                id: (simple_identifier))
                expression: (range_expression
                left: (integer_literal)
                right: (integer_literal))
                body: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (if_expression
                condition: (comparison_expression
                left: (integer_literal)
                right: (integer_literal))
                consequence: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (if_expression
                condition: (comparison_expression
                left: (integer_literal)
                right: (integer_literal))
                consequence: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))
                alternative: (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (while_statement
                (boolean_literal)
                (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))))
            (statement
            (do_while_statement
                (assignment
                left: (annotated_expression
                    annotation: (annotation
                    (user_type
                        (type_identifier)))
                    expression: (simple_identifier))
                right: (call_expression
                    expression: (simple_identifier)
                    args: (value_arguments)))
                (boolean_literal)))
            (statement
            (when_expression
                (when_subject
                (integer_literal))
                (when_entries
                (when_entry
                    (when_condition
                    (integer_literal))
                    (assignment
                    left: (annotated_expression
                        annotation: (annotation
                        (user_type
                            (type_identifier)))
                        expression: (simple_identifier))
                    right: (call_expression
                        expression: (simple_identifier)
                        args: (value_arguments)))))))
            (statement
            (call_expression
                expression: (dot_qualified_expression
                receiver: (simple_identifier)
                selector: (simple_identifier))
                lambda_arg: (annotated_lambda
                lambda_literal: (lambda_literal
                    body: (statements
                    (statement
                        (assignment
                        left: (annotated_expression
                            annotation: (annotation
                            (user_type
                                (type_identifier)))
                            expression: (simple_identifier))
                        right: (call_expression
                            expression: (simple_identifier)
                            args: (value_arguments)))))))))
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (elvis_expression
                left: (simple_identifier)
                right: (infix_expression
                    left: (simple_identifier)
                    operator: (simple_identifier)
                    right: (additive_expression
                    left: (simple_identifier)
                    right: (integer_literal))))))
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (return_expression
                (integer_literal))))
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (as_expression
                expression: (simple_identifier)
                type: (type
                    type: (user_type
                        (type_identifier)))))))))))

================================================================================
Enum with annotated members
================================================================================

enum class A {
    @[Ann] @Ann(1) X(),

    @Ann Y() {},

    private @Ann() Z(),

    @Ann @private Q,

    // TODO: try to make Ann() working here (?)
    @Ann() W;

    @Ann fun foo() {}
}

--------------------------------------------------------------------------------

(source_file
    (class_declaration
        modifiers: (modifiers
            (class_modifier))
    name: (simple_identifier)
    body: (class_body
        (enum_entry
        modifiers: (modifiers
            (annotation
            (user_type
                (type_identifier)))
            (annotation
            (constructor_invocation
                type: (user_type
                    (type_identifier))
                args: (value_arguments
                    (value_argument
                        expression: (integer_literal))))))
        name: (simple_identifier)
        arguments: (value_arguments))
        (enum_entry
        modifiers: (modifiers
            (annotation
            (user_type
                (type_identifier))))
        name: (simple_identifier)
        arguments: (value_arguments)
        body: (class_body))
        (enum_entry
        modifiers: (modifiers
            (visibility_modifier)
            (annotation
            (constructor_invocation
                type: (user_type
                    (type_identifier))
                args: (value_arguments))))
        name: (simple_identifier)
        arguments: (value_arguments))
        (enum_entry
        modifiers: (modifiers
            (annotation
            (user_type
                (type_identifier)))
            (annotation
            (user_type
                (type_identifier))))
        name: (simple_identifier))
        (line_comment)
        (enum_entry
        modifiers: (modifiers
            (annotation
            (constructor_invocation
                type: (user_type
                    (type_identifier))
                args: (value_arguments))))
        name: (simple_identifier))
        (function_declaration
        modifiers: (modifiers
            (annotation
            (user_type
                (type_identifier))))
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body
            (block))))))

================================================================================
Annotated Expressions
================================================================================

fun foo() {
    @[a] foo
    1
    @[a] this
}

--------------------------------------------------------------------------------

(source_file
    (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
        (block
        (statements
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (simple_identifier)))
            (statement
            (integer_literal))
            (statement
            (annotated_expression
                annotation: (annotation
                (user_type
                    (type_identifier)))
                expression: (this_expression))))))))

================================================================================
Annotations on parenthesized types
================================================================================

fun B<(@A C)>.receiverArgument() {}

fun parameter(a: (@A C)) {}

fun parameterArgument(a: B<(@A C)>) {}

fun returnValue(): (@A C)

fun <T> returnTypeParameterValue(): (@A T)

fun returnArgument(): B<(@A C)>

val lambdaType: (@A() (() -> C))

val lambdaParameter: ((@A C)) -> C
val lambdaParameterNP: (@A C) -> C

val lambdaReturnValue: () -> (@A C)

val lambdaReceiver: (@A C).() -> C

val lambdaParameterNP: (@A C) -> C

--------------------------------------------------------------------------------
